lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_export-5.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_export()
---
Ok(
    Export {
        items: [
            ExportItem {
                item: Ident {
                    raw: "one",
                    span: Span {
                        start: 9,
                        end: 12,
                    },
                },
                alias: Some(
                    Ident {
                        raw: "e1",
                        span: Span {
                            start: 16,
                            end: 18,
                        },
                    },
                ),
                span: Span {
                    start: 9,
                    end: 18,
                },
            },
            ExportItem {
                item: Ident {
                    raw: "two",
                    span: Span {
                        start: 20,
                        end: 23,
                    },
                },
                alias: Some(
                    Ident {
                        raw: "e2",
                        span: Span {
                            start: 27,
                            end: 29,
                        },
                    },
                ),
                span: Span {
                    start: 20,
                    end: 29,
                },
            },
            ExportItem {
                item: Ident {
                    raw: "three",
                    span: Span {
                        start: 31,
                        end: 36,
                    },
                },
                alias: None,
                span: Span {
                    start: 31,
                    end: 36,
                },
            },
        ],
        span: Span {
            start: 0,
            end: 39,
        },
    },
)
