lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_export.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_export()
---
Ok(
    Export {
        items: [],
        span: Span {
            file: FileId(
                0,
            ),
            start: 0,
            end: 10,
        },
    },
)
