lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_ident_pattern-2.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_ident_pattern()
---
Ok(
    Ident(
        IdentPattern {
            ident: Ident {
                raw: "i",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            bound: Some(
                Literal(
                    I64(
                        I64Lit {
                            base: Dec,
                            value: "1",
                            span: Span {
                                start: 4,
                                end: 5,
                            },
                        },
                    ),
                ),
            ),
            span: Span {
                start: 0,
                end: 5,
            },
        },
    ),
)
