lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_ident_pattern-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_ident_pattern()
---
Ok(
    Ident(
        IdentPattern {
            ident: Ident {
                raw: "i",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            bound: Some(
                Rest(
                    RestPattern {
                        span: Span {
                            start: 4,
                            end: 6,
                        },
                    },
                ),
            ),
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ),
)
