lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_ident_pattern.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_ident_pattern()
---
Ok(
    Ident(
        IdentPattern {
            ident: Ident {
                raw: "i",
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            bound: None,
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
)
