lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_import-4.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_import()
---
Ok(
    Import {
        file: StrLit {
            text: Some(
                StrText {
                    inner: "my-path",
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
            ),
            span: Span {
                start: 5,
                end: 14,
            },
        },
        name: None,
        items: [
            ImportItem {
                item: Ident {
                    raw: "one",
                    span: Span {
                        start: 24,
                        end: 27,
                    },
                },
                alias: None,
                span: Span {
                    start: 24,
                    end: 27,
                },
            },
            ImportItem {
                item: Ident {
                    raw: "two",
                    span: Span {
                        start: 29,
                        end: 32,
                    },
                },
                alias: None,
                span: Span {
                    start: 29,
                    end: 32,
                },
            },
        ],
        star: false,
        span: Span {
            start: 0,
            end: 35,
        },
    },
)
