lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_import-5.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_import()
---
Ok(
    Import {
        file: StrLit {
            text: Some(
                StrText {
                    inner: "my-path",
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
            ),
            span: Span {
                start: 5,
                end: 14,
            },
        },
        name: None,
        items: [
            ImportItem {
                item: Ident {
                    raw: "one",
                    span: Span {
                        start: 24,
                        end: 27,
                    },
                },
                alias: Some(
                    Ident {
                        raw: "i1",
                        span: Span {
                            start: 31,
                            end: 33,
                        },
                    },
                ),
                span: Span {
                    start: 31,
                    end: 33,
                },
            },
            ImportItem {
                item: Ident {
                    raw: "two",
                    span: Span {
                        start: 35,
                        end: 38,
                    },
                },
                alias: Some(
                    Ident {
                        raw: "i2",
                        span: Span {
                            start: 42,
                            end: 44,
                        },
                    },
                ),
                span: Span {
                    start: 42,
                    end: 44,
                },
            },
            ImportItem {
                item: Ident {
                    raw: "three",
                    span: Span {
                        start: 46,
                        end: 51,
                    },
                },
                alias: None,
                span: Span {
                    start: 46,
                    end: 51,
                },
            },
        ],
        star: false,
        span: Span {
            start: 0,
            end: 54,
        },
    },
)
