lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_import.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_import()
---
Ok(
    Import {
        file: StrLit {
            text: Some(
                StrText {
                    inner: "my-path",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 6,
                        end: 13,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 14,
            },
        },
        name: Some(
            Ident {
                raw: "my_path",
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 18,
                    end: 25,
                },
            },
        ),
        items: [],
        star: false,
        span: Span {
            file: FileId(
                0,
            ),
            start: 0,
            end: 26,
        },
    },
)
