lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_index-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Index(
        Index {
            lhs: Index(
                Index {
                    lhs: Index(
                        Index {
                            lhs: I64(
                                I64Lit {
                                    base: Dec,
                                    value: "2",
                                    span: Span {
                                        file: FileId(
                                            0,
                                        ),
                                        start: 0,
                                        end: 1,
                                    },
                                },
                            ),
                            rhs: Ident(
                                Ident {
                                    raw: "one",
                                    span: Span {
                                        file: FileId(
                                            0,
                                        ),
                                        start: 2,
                                        end: 5,
                                    },
                                },
                            ),
                            span: Span {
                                file: FileId(
                                    0,
                                ),
                                start: 0,
                                end: 6,
                            },
                        },
                    ),
                    rhs: Ident(
                        Ident {
                            raw: "two",
                            span: Span {
                                file: FileId(
                                    0,
                                ),
                                start: 7,
                                end: 10,
                            },
                        },
                    ),
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 0,
                        end: 11,
                    },
                },
            ),
            rhs: Ident(
                Ident {
                    raw: "three",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 12,
                        end: 17,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 18,
            },
        },
    ),
)
